// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using fe should merge class names 1`] = `
Array [
  ".a{color:red}.b:hover{color:blue}",
  <div
    className="foo-bar baz a b"
  >
    Hello
  </div>,
]
`;

exports[`Using fe should render inline style as CSS 1`] = `
Array [
  ".a{color:red}.b:hover{color:blue}",
  <div
    className="a b"
  >
    Hello
  </div>,
]
`;
